test/should_pass/annot_003.grg
actions annot_003;

rule r {
	pattern {
		[prio=10000] : Node;
	}
	modify {
	}
}

