test/should_fail/annot_006.grg
actions annot_006;

rule r {
	pattern {
		:Node [prio=42];
	}
	modify {}
}
